--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=localhost
-DB_USER=myuser
-DB_PASSWORD=mypassword
+DB_HOST=mongodb+srv://PowerPulse:sWKcvaIlh4ebmCWu@cluster0.vkzqqfi.mongodb.net/
+DB_USER=PowerPulse
+DB_PASSWORD=sWKcvaIlh4ebmCWu
 SECRET_KEY=mysecretkey
