--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=mongodb+srv://PowerPulse:sWKcvaIlh4ebmCWu@cluster0.vkzqqfi.mongodb.net/
+MONGODB_URL=mongodb+srv://PowerPulse:sWKcvaIlh4ebmCWu@cluster0.vkzqqfi.mongodb.net/PowerPulse
 DB_USER=PowerPulse
 DB_PASSWORD=sWKcvaIlh4ebmCWu
-SECRET_KEY=mysecretkey
+SECRET_KEY=PoverpulseSecretkey
