--- a/package.json
+++ b/package.json
@@ -15,18 +15,16 @@
     "cross-env": "7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.17.1",
-    "gravatar": "^1.8.2",
-    "jimp": "^0.22.10",
     "joi": "^17.10.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^3.3.4",
-    "nodemailer": "^6.9.6",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "eslint": "7.19.0",
